<resources>
    <string name="app_name">RelaxTep</string>
    <string name="login">Login</string>
    <string name="create_account">New User? Create Account</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>