<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".RegisterScreen">

    <ImageView
        android:id="@+id/img"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:src="@drawable/icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        app:layout_constraintTop_toBottomOf="@id/img"/>

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@id/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        app:layout_constraintTop_toBottomOf="@id/phoneno"
        app:layout_constraintBottom_toTopOf="@id/username"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintBottom_toTopOf="@id/btn_register"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>